# proconio-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
proconio/: Cargo.toml  README.md
proconio-derive/: Cargo.toml  README.md
proconio-derive/src/: derive_readable.rs  fastout.rs  lib.rs
proconio/src/: lib.rs  marker.rs  read.rs  types.rs  warning.rs
proconio/src/source/: line.rs  mod.rs  once.rs  tokens.rs
proconio/tests/: derive.rs  fastout.rs  input_once.rs  interactive.rs  issue_14.rs  mixed_source.rs  read_value.rs  read_value_interactive.rs  stdin.rs  test_compile_issue_14.rs  ui.rs
proconio/tests/compile-fail/: issue_14.rs  issue_14.stderr
proconio/tests/ui/fastout/: argument-never-used.rs  argument-never-used.stderr  format-argument-must-be-a-string-literal.rs  format-argument-must-be-a-string-literal.stderr  print-macros-in-closures.rs  print-macros-in-closures.stderr  requires-at-least-a-format-string-argument.rs  requires-at-least-a-format-string-argument.stderr
src/: lib.rs  read.rs  source.rs  types.rs
src/source/: line.rs  mod.rs  once.rs
tests/: derive.rs  fastout.rs  stdin.rs  stdout.rs
