[package]
name = "proconio-derive"
version = "0.1.1"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
repository = "https://github.com/statiolake/proconio-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Procedural macros for proconio"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.12"
proc-macro2 = "0.4.30"

[dependencies.syn]
version = "0.15.34"
features = ["full", "extra-traits"]

[dev-dependencies.proconio]
version = "0.1.1"
path = "../proconio"
