[package]
name = "proconio-derive"
version = "0.2.1"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
rust-version = "1.67.1"
repository = "https://github.com/statiolake/proconio-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Procedural macros for proconio"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"

[dependencies.syn]
version = "1.0.17"
features = ["full", "extra-traits", "visit"]

[dev-dependencies.proconio]
version = "0.4.0"
path = "../proconio"
