[package]
name = "proconio"
version = "0.3.8"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
repository = "https://github.com/statiolake/proconio-rs"
keywords = ["io", "procon", "procon"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easy IO library for competitive programming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "stdin"
path = "tests/stdin.rs"
harness = false

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive"]

[[test]]
name = "fastout"
path = "tests/fastout.rs"
required-features = ["derive"]

[[test]]
name = "test_compile_issue_14"
path = "tests/test_compile_issue_14.rs"
required-features = ["derive"]

[dependencies]
lazy_static = "1.3.0"

[dependencies.proconio-derive]
version = "0.1.0"
path = "../proconio-derive"
optional = true

[dev-dependencies]
assert_cli = "0.6.3"
rustversion = "1.0"
trybuild = "1.0"

[features]
derive = ["proconio-derive"]
