[package]
name = "proconio"
version = "0.4.4"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
rust-version = "1.67.1"
repository = "https://github.com/statiolake/proconio-rs"
keywords = ["io", "procon", "procon"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easy IO library for competitive programming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "stdin"
path = "tests/stdin.rs"
harness = false

[[test]]
name = "interactive"
path = "tests/interactive.rs"
harness = false

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive"]

[[test]]
name = "fastout"
path = "tests/fastout.rs"
required-features = ["derive"]

[[test]]
name = "ui"
path = "tests/ui.rs"
required-features = ["derive"]

[[test]]
name = "issue_14"
path = "tests/issue_14.rs"
required-features = ["derive"]
harness = false

[dependencies]
# 1.15.0 uses Rust 2021 edition; does not compile on Rust 1.42.
once_cell = "=1.14.0"

[dependencies.proconio-derive]
version = "0.2.0"
path = "../proconio-derive"
optional = true

[dev-dependencies]
rustversion = "1.0.2"
trybuild = "=1.0.67"
assert_cli = "0.6.3"

[features]
derive = ["proconio-derive"]
